--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^7.5.0",
     "mysql2": "^3.3.0"
   }
 }
