--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,35 +2,44 @@ version: '3.8'
 
 services:
   db:
-    image: mysql:latest
+    image: mysql:8
     container_name: mysql_db
-    restart: always
-    environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: testdb
-      MYSQL_USER: user
-      MYSQL_PASSWORD: password
+    restart: unless-stopped
+    env_file:
+      - .env
     ports:
       - "3306:3306"
     volumes:
       - db_data:/var/lib/mysql
+      - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
 
   app:
     build: .
     container_name: express_app
-    restart: always
+    restart: unless-stopped
     depends_on:
-      - db
+      db:
+        condition: service_healthy
+    expose:
+      - "3000"  # internal port ที่ใช้ใน network
+    env_file:
+      - .env
+
+  nginx:
+    image: nginx:latest
+    container_name: nginx_proxy
+    restart: unless-stopped
     ports:
-      - "3000:3000"
-    environment:
-      DB_HOST: db
-      DB_USER: user
-      DB_PASSWORD: password
-      DB_NAME: testdb
+      - "80:80"
     volumes:
-      - .:/usr/src/app
-      - /usr/src/app/node_modules
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+    depends_on:
+      - app
 
 volumes:
   db_data:
